@@ -60,7 +60,7 @@
                             <li class="line"></li>
                             <li><a>{{labelTypeService}}</a></li>
                             <li class="line"></li>
-                            <li><a [routerLink]="['/login']">Logout</a></li>
+                            <li><a [routerLink]="['/login/logout']">Logout</a></li>
                         </ul>
                     </div>
                 </li>
@@ -202,7 +202,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a [routerLink]="['/login']">Logout</a>
+                                        <a [routerLink]="['/login/logout']">Logout</a>
                                     </li>
                                 </ul>
                             </div>
