@@ -37,7 +37,7 @@
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1">
                             <i class="fa fa-user" aria-hidden="true"></i></span>
-                            <input type="text" placeholder="Username" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel"
+                            <input type="text" placeholder="Username" class="form-control" name="username" [(ngModel)]="user.username" #username="ngModel"
                                 required autofocus />
                         </div>
                         <div *ngIf="f.submitted && !username.valid" class="help-block">
@@ -46,12 +46,22 @@
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon2">
                             <i class="fa fa-key" aria-hidden="true"></i></span>
-                            <input type="password" placeholder="Password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel"
+                            <input type="password" placeholder="Password" class="form-control" name="password" [(ngModel)]="user.password" #password="ngModel"
                                 required />
                         </div>
                         <div *ngIf="f.submitted && !password.valid" class="help-block">
                             <span class="badge badge-danger pull-right">'Password' obbligatorio</span>
                         </div>
+
+                        <!--
+                        <div class="checkbox">
+                            <input type="checkbox" id="rememberme" name="rememberme" [(ngModel)]="user.rememberme" />
+                            <label for="rememberme">
+                                Ricordami
+                            </label>
+                        </div>
+                        -->
+
                         <div class="text-center">
                             <button [disabled]="loading" class="btn btn-success btn-submit btn-large" type="submit">Accedi</button>
                         </div>
